add fusion section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <a href="#">중재 요청하기 <span class="material-symbols-outlined">
                 arrow_right_alt
               </span></a>
-            <a href="#">더 알아보기</a>
+            <a href="#about">더 알아보기</a>
           </div>
           <!-- Counter Section  -->
           <div class="counter-section">
@@ -124,7 +124,7 @@
   <!-- Top Banner Box  -->
 
   <!-- Why Box Section  -->
-  <section class="why-box-wrapper">
+  <section class="why-box-wrapper" id="about">
     <div class="container-fluid">
       <div class="why-box-inner">
         <div class="left-box">
@@ -348,6 +348,26 @@
     </div>
   </section>
   <!-- Who wr are Section  -->
+
+  <!-- Fusion Section  -->
+   <section class="fusion-section">
+    <div class="container-fluid">
+      <div class="fusion-inner">
+        <div class="left-section">
+          <p>차별화</p>
+          <h2>법률과 기술의 융합, <br/>문제 해결의 새로운 패러다임.</h2>
+        </div>
+        <div class="right-section">
+          <p>대한건물관리협회는 집합건물법에 대한 깊은 이해와 경험을 바탕으로, 법적 안정성을 제공합니다. 또한, 최신 기술을 활용하여 투명한 관리 솔루션을 제공하며, 모든 회원사들이 신뢰할 수 있는 환경을 조성합니다.</p>
+          <p class="last-para">다른 협회와는 달리, 대한건물관리협회는 <span>실질적인 문제 해결에 집중</span>하며, <br/><span>중재</span>와 <span>법률 상담</span>을 통해 갈등을 최소화합니다.</p>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-block-image">
+      <img src="./assets/images/fusion-box.svg" alt="">
+    </div>
+   </section>
+  <!-- Fusion Section  -->
 
 
 
