--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
           </div>
           <div class="content-box">
             <p><span>관리 절감 솔루션: </span>최신 관리 도구를 활용하여 건물 관리 비 <br />용을 절감하고, 운영 효율성을 극대화합니다.</p>
-            <p><span>사례 연구 제공: </span>성공적인 관리 사례를 통해, 비용 절감과 <br />효율적인 운영 방안을 확인하고 적용해 보세요.</p>
+            <p class="last-para"><span>사례 연구 제공: </span>성공적인 관리 사례를 통해, 비용 절감과 <br />효율적인 운영 방안을 확인하고 적용해 보세요.</p>
           </div>
         </div>
         <div class="benifits-box">
@@ -513,7 +513,7 @@
           </div>
           <div class="content-box">
             <p><span>법적 안정성 확보: </span>법적 분쟁 및 이슈를 예방하고 해결하기 <br />위해, 전문가의 법률 자문을 제공합니다.</p>
-            <p><span>협회 네트워킹 혜택: </span>회원 간의 네트워킹을 통해, 산업 내에 <br />서 입지를 강화하고, 새로운 협력 기회를 발굴해 보세요.</p>
+            <p class="last-para"><span>협회 네트워킹 혜택: </span>회원 간의 네트워킹을 통해, 산업 내에 <br />서 입지를 강화하고, 새로운 협력 기회를 발굴해 보세요.</p>
           </div>
         </div>
       </div>
