font size increased 16px to 18px

--- a/index.html
+++ b/index.html
@@ -70,6 +70,44 @@
               로그인 / 회원가입
             </a>
           </div>
+          <!-- Mobile Menu  -->
+          <div class="mobile-menu-wrapper">
+            <!-- <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+              aria-controls="offcanvasExample">
+              Link with href
+            </a> -->
+            <button class="btn btn-primary mobile-menu-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+              aria-controls="offcanvasExample">
+              <span class="bar1"></span>
+              <span class="bar2"></span>
+              <span class="bar3"></span>
+            </button>
+
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+              aria-labelledby="offcanvasExampleLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <div>
+                  Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images,
+                  lists, etc.
+                </div>
+                <div class="dropdown mt-3">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Dropdown button
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Mobile Menu  -->
         </div>
       </div>
     </div>
@@ -258,7 +296,7 @@
         <div class="right-section">
           <h2>가장 큰 문제는<br /><span>투명성과 공정성</span> 의 부재입니다.</h2>
           <h5>많은 건물에서 공실 호수의 전기료가 <span>면적기준으로</span> 부과되는 것이 일반적입니다.</h5>
-          <p>하지만 일부 빌딩에서는 이를 사용량 기준으로 변경하면서, 공실 호수들은 전기료를 내지 않게 되어, <br />나머지 점유 호수들이 그 비용을 부담하게 되는 불공정한 상황이 발생하고 있습니다.
+          <p>하지만 일부 빌딩에서는 이를 사용량 기준으로 변경하면서, 공실 호수들은 전기료를 내지 않게 되어, 나머지 점유 호수들이 그 비용을 부담하게 되는 불공정한 상황이 발생하고 있습니다.
             <br />이러한 불투명한 관리방식은 건물주와 관리 업체 간의 갈등을 심화시키고, <br />결국 법적 분쟁으로까지 이어질 위험이 큽니다.
           </p>
           <h6>“ 불투명한 관리에서 벗어나, 이제는 <span>명확한 해답</span>이 필요합니다. ”</h6>
@@ -457,7 +495,7 @@
           <h2>협회 회원이 되면 <br />누릴 수 있는 <span>혜택</span></h2>
         </div>
         <div class="right-section">
-          <p>협회 회원이 되시면, 공정한 중재와 상담 서비스, 최신 관리 솔루션 제공, 법적 안정성 확보, <br />업계 네트워킹 기회 등 다양한 혜택을 누리실 수 있습니다.</p>
+          <p>협회 회원이 되시면, 공정한 중재와 상담 서비스, 최신 관리 솔루션 제공, 법적 안정성 확보, 업계 네트워킹 기회 등 다양한 혜택을 누리실 수 있습니다.</p>
           <p class="last-para">협회 가입 후 관리비 절감 및 공실 관리 문제 해결로 <br />연간 수익이 개선된 실제 사례를 확인해보세요.</p>
         </div>
       </div>
@@ -513,7 +551,8 @@
           </div>
           <div class="content-box">
             <p><span>법적 안정성 확보: </span>법적 분쟁 및 이슈를 예방하고 해결하기 <br />위해, 전문가의 법률 자문을 제공합니다.</p>
-            <p class="last-para" ><span>협회 네트워킹 혜택: </span>회원 간의 네트워킹을 통해, 산업 내에 <br />서 입지를 강화하고, 새로운 협력 기회를 발굴해 보세요.</p>
+            <p class="last-para"><span>협회 네트워킹 혜택: </span>회원 간의 네트워킹을 통해, 산업 내에 <br />서 입지를 강화하고, 새로운 협력 기회를 발굴해 보세요.
+            </p>
           </div>
         </div>
       </div>
@@ -676,7 +715,7 @@
         <div class="left-section">
           <h2>건물 관리에서 놓치기 쉬운 문제들,</h2>
           <h4>지금 점검해보세요!</h4>
-          <p>현재 귀하의 건물에서 발생할 수 있는 문제들을 점검해보세요. 공실 전기료, 관리비 분쟁, <br />법률적 문제 등 협회의 도움을 받을 수 있는 다양한 상황을 확인하십시오.</p>
+          <p>현재 귀하의 건물에서 발생할 수 있는 문제들을 점검해보세요. 공실 전기료, 관리비 분쟁, 법률적 문제 등 협회의 도움을 받을 수 있는 다양한 상황을 확인하십시오.</p>
           <div class="link-wrapper">
             <a href="#">중재 요청하기 <span class="material-symbols-outlined">
                 arrow_right_alt
