home page mobiel version done

--- a/index.html
+++ b/index.html
@@ -76,34 +76,32 @@
               aria-controls="offcanvasExample">
               Link with href
             </a> -->
-            <button class="btn btn-primary mobile-menu-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-              aria-controls="offcanvasExample">
+            <button class="btn btn-primary mobile-menu-btn" type="button" data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
               <span class="bar1"></span>
               <span class="bar2"></span>
               <span class="bar3"></span>
             </button>
 
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
               aria-labelledby="offcanvasExampleLabel">
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="#">
+                    <img src="./assets/images/logo-icon.svg" alt="">
+                    대한건물관리협회
+                  </a></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
-                <div>
-                  Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images,
-                  lists, etc.
-                </div>
-                <div class="dropdown mt-3">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                    Dropdown button
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <div class="menu-wrapper">
+                  <ul>
+                    <li><a href="#">협회 소개</a></li>
+                    <li><a href="#">분쟁해결요청</a></li>
+                    <li><a href="#">커뮤니티</a></li>
+                    <li><a href="#">협회 가입안내</a></li>
                   </ul>
                 </div>
+
               </div>
             </div>
           </div>
@@ -221,6 +219,14 @@
               </div>
             </div>
           </div>
+          <div class="mobile-note-box">
+            <div class="note-box">
+              <div class="star-image">
+                <img src="./assets/images/star.png" alt="star">
+              </div>
+              <p>“이러한 문제들로 인해 관리자의 업무 부담이 늘어나고<br />건물의 가치가 저하될 수 있습니다.”</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -329,7 +335,9 @@
               <div class="top-transparency-box">
                 <div class="inner-box">
                   <div class="image-box">
-                    <img src="./assets/images/file-search-02.svg" alt="">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 11H8M10 15H8M16 7H8M20 10.5V6.8C20 5.11984 20 4.27976 19.673 3.63803C19.3854 3.07354 18.9265 2.6146 18.362 2.32698C17.7202 2 16.8802 2 15.2 2H8.8C7.11984 2 6.27976 2 5.63803 2.32698C5.07354 2.6146 4.6146 3.07354 4.32698 3.63803C4 4.27976 4 5.11984 4 6.8V17.2C4 18.8802 4 19.7202 4.32698 20.362C4.6146 20.9265 5.07354 21.3854 5.63803 21.673C6.27976 22 7.11984 22 8.8 22H11.5M22 22L20.5 20.5M21.5 18C21.5 19.933 19.933 21.5 18 21.5C16.067 21.5 14.5 19.933 14.5 18C14.5 16.067 16.067 14.5 18 14.5C19.933 14.5 21.5 16.067 21.5 18Z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
                   </div>
                   <h5>투명성</h5>
                 </div>
@@ -358,13 +366,17 @@
               <div class="bottom-fairness-relaibility-box">
                 <div class="fairness-box">
                   <div class="image-box">
-                    <img src="./assets/images/scales-01.svg" alt="">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M2 17V16.8498C2 16.5333 2 16.3751 2.02421 16.2209C2.0457 16.084 2.08136 15.9497 2.13061 15.8202C2.18609 15.6743 2.2646 15.5369 2.42162 15.2622L6 9M2 17C2 19.2091 3.79086 21 6 21C8.20914 21 10 19.2091 10 17M2 17V16.8C2 16.52 2 16.38 2.0545 16.273C2.10243 16.1789 2.17892 16.1024 2.273 16.0545C2.37996 16 2.51997 16 2.8 16H9.2C9.48003 16 9.62004 16 9.727 16.0545C9.82108 16.1024 9.89757 16.1789 9.9455 16.273C10 16.38 10 16.52 10 16.8V17M6 9L9.57838 15.2622C9.7354 15.5369 9.81391 15.6743 9.86939 15.8202C9.91864 15.9497 9.9543 16.084 9.97579 16.2209C10 16.3751 10 16.5333 10 16.8498V17M6 9L18 7M14 15V14.8498C14 14.5333 14 14.3751 14.0242 14.2209C14.0457 14.084 14.0814 13.9497 14.1306 13.8202C14.1861 13.6743 14.2646 13.5369 14.4216 13.2622L18 7M14 15C14 17.2091 15.7909 19 18 19C20.2091 19 22 17.2091 22 15M14 15V14.8C14 14.52 14 14.38 14.0545 14.273C14.1024 14.1789 14.1789 14.1024 14.273 14.0545C14.38 14 14.52 14 14.8 14H21.2C21.48 14 21.62 14 21.727 14.0545C21.8211 14.1024 21.8976 14.1789 21.9455 14.273C22 14.38 22 14.52 22 14.8V15M18 7L21.5784 13.2622C21.7354 13.5369 21.8139 13.6743 21.8694 13.8202C21.9186 13.9497 21.9543 14.084 21.9758 14.2209C22 14.3751 22 14.5333 22 14.8498V15M12 3V8" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
                   </div>
                   <h5>공정성</h5>
                 </div>
                 <div class="relaibility-box">
                   <div class="image-box">
-                    <img src="./assets/images/check-verified-02.svg" alt="">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9 12L11 14L15.5 9.5M17.9012 4.99851C18.1071 5.49653 18.5024 5.8924 19.0001 6.09907L20.7452 6.82198C21.2433 7.02828 21.639 7.42399 21.8453 7.92206C22.0516 8.42012 22.0516 8.97974 21.8453 9.47781L21.1229 11.2218C20.9165 11.7201 20.9162 12.2803 21.1236 12.7783L21.8447 14.5218C21.9469 14.7685 21.9996 15.0329 21.9996 15.2999C21.9997 15.567 21.9471 15.8314 21.8449 16.0781C21.7427 16.3249 21.5929 16.549 21.4041 16.7378C21.2152 16.9266 20.991 17.0764 20.7443 17.1785L19.0004 17.9009C18.5023 18.1068 18.1065 18.5021 17.8998 18.9998L17.1769 20.745C16.9706 21.2431 16.575 21.6388 16.0769 21.8451C15.5789 22.0514 15.0193 22.0514 14.5212 21.8451L12.7773 21.1227C12.2792 20.9169 11.7198 20.9173 11.2221 21.1239L9.47689 21.8458C8.97912 22.0516 8.42001 22.0514 7.92237 21.8453C7.42473 21.6391 7.02925 21.2439 6.82281 20.7464L6.09972 19.0006C5.8938 18.5026 5.49854 18.1067 5.00085 17.9L3.25566 17.1771C2.75783 16.9709 2.36226 16.5754 2.15588 16.0777C1.94951 15.5799 1.94923 15.0205 2.1551 14.5225L2.87746 12.7786C3.08325 12.2805 3.08283 11.7211 2.8763 11.2233L2.15497 9.47678C2.0527 9.2301 2.00004 8.96568 2 8.69863C1.99996 8.43159 2.05253 8.16715 2.15472 7.92043C2.25691 7.67372 2.40671 7.44955 2.59557 7.26075C2.78442 7.07195 3.00862 6.92222 3.25537 6.8201L4.9993 6.09772C5.49687 5.89197 5.89248 5.4972 6.0993 5.00006L6.82218 3.25481C7.02848 2.75674 7.42418 2.36103 7.92222 2.15473C8.42027 1.94842 8.97987 1.94842 9.47792 2.15473L11.2218 2.87712C11.7199 3.08291 12.2793 3.08249 12.7771 2.87595L14.523 2.15585C15.021 1.94966 15.5804 1.9497 16.0784 2.15597C16.5763 2.36223 16.972 2.75783 17.1783 3.25576L17.9014 5.00153L17.9012 4.99851Z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
                   </div>
                   <h5>신뢰성</h5>
                 </div>
@@ -416,7 +428,8 @@
         <div class="left-section">
           <div class="left-inner">
             <div class="image-box">
-              <img src="./assets/images/korean-building.png" alt="">
+              <img class="desktop-image" src="./assets/images/korean-building.png" alt="">
+              <img class="mobile-image" src="./assets/images/korean-building-mobile.png" alt="">
             </div>
             <div class="up-text-wrapper">
               <h2>대한건물관리협회 <br />주요 서비스 안내</h2>
@@ -571,14 +584,16 @@
           <div class="success-stories-slider owl-carousel owl-theme">
             <div class="item">
               <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>대한건물관리협회에 감사의 말씀을 전하고 싶습니다.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>관리 솔루션 덕분에 비용을 대폭 줄일 수 있었어요. 맞춤형 컨설팅으로 관리 업무가 효율적이고 체계적으로 개선되었습니다.</p>
+                <div class="item-inner-top-wrapper">
+                  <div class="quote-box">
+                    <img src="./assets/images/quote.svg" alt="">
+                  </div>
+                  <div class="title-box">
+                    <h4>대한건물관리협회에 감사의 말씀을 전하고 싶습니다.</h4>
+                  </div>
+                  <div class="paragraph-content">
+                    <p>관리 솔루션 덕분에 비용을 대폭 줄일 수 있었어요. 맞춤형 컨설팅으로 관리 업무가 효율적이고 체계적으로 개선되었습니다.</p>
+                  </div>
                 </div>
                 <div class="user-designation-box">
                   <div class="user-image">
@@ -593,14 +608,16 @@
             </div>
             <div class="item">
               <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>긴 법적 분쟁을 빠르게 해결해 주셔서 감사합니다.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>대한건물관리협회의 도움 덕분에 오랜 법적 분쟁을 빠르게 해결할 수 있었습니다. 협회의 전문적인 중재와 법률 지원 덕분에, 시간과 비용을 크게 절감할 수 있었습니다.</p>
+                <div class="item-inner-top-wrapper">
+                  <div class="quote-box">
+                    <img src="./assets/images/quote.svg" alt="">
+                  </div>
+                  <div class="title-box">
+                    <h4>긴 법적 분쟁을 빠르게 해결해 주셔서 감사합니다.</h4>
+                  </div>
+                  <div class="paragraph-content">
+                    <p>대한건물관리협회의 도움 덕분에 오랜 법적 분쟁을 빠르게 해결할 수 있었습니다. 협회의 전문적인 중재와 법률 지원 덕분에, 시간과 비용을 크게 절감할 수 있었습니다.</p>
+                  </div>
                 </div>
                 <div class="user-designation-box">
                   <div class="user-image">
@@ -615,80 +632,16 @@
             </div>
             <div class="item">
               <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>복잡한 규제 문제를 한 번에 해결했어요.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>복잡한 규제 문제를 협회와 함께 해결했습니다. 덕분에 모든 법적 요구 사항을 충족하고, 안정성을 높일 수 있었습니다.</p>
-                </div>
-                <div class="user-designation-box">
-                  <div class="user-image">
-                    <img src="./assets/images/user3.png" alt="">
+                <div class="item-inner-top-wrapper">
+                  <div class="quote-box">
+                    <img src="./assets/images/quote.svg" alt="">
                   </div>
-                  <div class="designation-content">
-                    <h6>이영희</h6>
-                    <p>회원</p>
+                  <div class="title-box">
+                    <h4>복잡한 규제 문제를 한 번에 해결했어요.</h4>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>대한건물관리협회에 감사의 말씀을 전하고 싶습니다.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>관리 솔루션 덕분에 비용을 대폭 줄일 수 있었어요. 맞춤형 컨설팅으로 관리 업무가 효율적이고 체계적으로 개선되었습니다.</p>
-                </div>
-                <div class="user-designation-box">
-                  <div class="user-image">
-                    <img src="./assets/images/user1.png" alt="">
+                  <div class="paragraph-content">
+                    <p>복잡한 규제 문제를 협회와 함께 해결했습니다. 덕분에 모든 법적 요구 사항을 충족하고, 안정성을 높일 수 있었습니다.</p>
                   </div>
-                  <div class="designation-content">
-                    <h6>박철민</h6>
-                    <p>회원</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>긴 법적 분쟁을 빠르게 해결해 주셔서 감사합니다.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>대한건물관리협회의 도움 덕분에 오랜 법적 분쟁을 빠르게 해결할 수 있었습니다. 협회의 전문적인 중재와 법률 지원 덕분에, 시간과 비용을 크게 절감할 수 있었습니다.</p>
-                </div>
-                <div class="user-designation-box">
-                  <div class="user-image">
-                    <img src="./assets/images/user2.png" alt="">
-                  </div>
-                  <div class="designation-content">
-                    <h6>이영희</h6>
-                    <p>회원</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="item-inner">
-                <div class="quote-box">
-                  <img src="./assets/images/quote.svg" alt="">
-                </div>
-                <div class="title-box">
-                  <h4>복잡한 규제 문제를 한 번에 해결했어요.</h4>
-                </div>
-                <div class="paragraph-content">
-                  <p>복잡한 규제 문제를 협회와 함께 해결했습니다. 덕분에 모든 법적 요구 사항을 충족하고, 안정성을 높일 수 있었습니다.</p>
                 </div>
                 <div class="user-designation-box">
                   <div class="user-image">
@@ -713,8 +666,8 @@
     <div class="container-fluid">
       <div class="management-issues-inner">
         <div class="left-section">
-          <h2>건물 관리에서 놓치기 쉬운 문제들,</h2>
-          <h4>지금 점검해보세요!</h4>
+          <h2>건물 관리에서<br/> 놓치기 쉬운 문제들,</h2>
+          <h4><span>지금 점검해보세요!</span></h4>
           <p>현재 귀하의 건물에서 발생할 수 있는 문제들을 점검해보세요. 공실 전기료, 관리비 분쟁, 법률적 문제 등 협회의 도움을 받을 수 있는 다양한 상황을 확인하십시오.</p>
           <div class="link-wrapper">
             <a href="#">중재 요청하기 <span class="material-symbols-outlined">
@@ -785,6 +738,13 @@
               </div>
             </div>
           </div>
+          <div class="mobile-link-wrapper">
+            <div class="link-wrapper">
+              <a href="#">중재 요청하기 <span class="material-symbols-outlined">
+                  arrow_right_alt
+                </span></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -827,7 +787,8 @@
       </div>
     </div>
     <div class="footer-copyright">
-      <p>© 2024 Korean Building Maintenance Society. All Right Reserved</p>
+      <p class="copyright-desktop">© 2024 Korean Building Maintenance Society. All Right Reserved</p>
+      <p class="copyright-mobile">© 2024 Building Management.<br/> All Right Reserved</p>
     </div>
   </footer>
   <!-- Footer  -->
