--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="left-content-box">
           <div style="overflow: hidden;">
             <h1 class="animate fade-in-top-animation" data-animate="" data-animation="fade-in-top"
-              data-animation-delay="300">공정하고 투명한 건물 관리,<br /><span>대한건물관리협회</span> 가 함께합니다.</h1>
+              data-animation-delay="300">공정하고 투명한 건물 관리,<br /><span>대한건물관리협회</span> 가<br class="mobile-break"/> 함께합니다.</h1>
           </div>
           <p>대한건물관리협회는 건물 관리의 공정성과 투명성을 보장하기 위해<br /> 중재와 상담을 지원하는 <span>비영리 단체</span>입니다.</p>
           <div class="link-wrapper">
@@ -301,11 +301,11 @@
         </div>
         <div class="right-section">
           <h2>가장 큰 문제는<br /><span>투명성과 공정성</span> 의 부재입니다.</h2>
-          <h5>많은 건물에서 공실 호수의 전기료가 <span>면적기준으로</span> 부과되는 것이 일반적입니다.</h5>
+          <h5>많은 건물에서 공실 호수의 전기료가<br/> <span>면적기준으로</span> 부과되는 것이 일반적입니다.</h5>
           <p>하지만 일부 빌딩에서는 이를 사용량 기준으로 변경하면서, 공실 호수들은 전기료를 내지 않게 되어, 나머지 점유 호수들이 그 비용을 부담하게 되는 불공정한 상황이 발생하고 있습니다.
             <br />이러한 불투명한 관리방식은 건물주와 관리 업체 간의 갈등을 심화시키고, <br />결국 법적 분쟁으로까지 이어질 위험이 큽니다.
           </p>
-          <h6>“ 불투명한 관리에서 벗어나, 이제는 <span>명확한 해답</span>이 필요합니다. ”</h6>
+          <h6>“ 불투명한 관리에서 벗어나,<br/> 이제는 <span>명확한 해답</span>이 필요합니다. ”</h6>
         </div>
       </div>
     </div>
@@ -395,6 +395,15 @@
           <!-- Animation Box  -->
         </div>
       </div>
+      <!-- Mobile Link  -->
+      <div class="mobile-link">
+        <div class="link-wrapper">
+          <a href="#">협회 가입신청 <span class="material-symbols-outlined">
+              arrow_right_alt
+            </span></a>
+        </div>
+      </div>
+     <!-- Mobile Link  -->
     </div>
   </section>
   <!-- Who wr are Section  -->
