fixed meeting corrections

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
             <h1 class="animate fade-in-top-animation" data-animate="" data-animation="fade-in-top"
               data-animation-delay="300">공정하고 투명한 건물 관리,<br /><span>대한건물관리협회</span>가<br class="mobile-break"/> 함께합니다.</h1>
           </div>
-          <p>대한건물관리협회는 건물 관리의 공정성과 투명성을 보장하기 위해<br /> 중재와 상담을 지원하는 <span>비영리 단체</span>입니다.</p>
+          <p class="desktop-title">대한건물관리협회는 건물 관리의 공정성과 투명성을 보장하기 위해<br /> 중재와 상담을 지원하는 <span>비영리 단체</span>입니다.</p>
+          <p class="mobile-title">대한건물관리협회는 건물 관리의 공정성과 투명성을<br /> 보장하기 위해 중재와 상담을 지원하는<br /> <span>비영리 단체</span>입니다.</p>
           <div class="link-wrapper">
             <a href="#">중재 요청하기 <span class="material-symbols-outlined">
                 arrow_right_alt
@@ -224,7 +225,10 @@
               <div class="star-image">
                 <img src="./assets/images/star.png" alt="star">
               </div>
-              <p>“이러한 문제들로 인해 관리자의 업무 부담이 늘어나고<br />건물의 가치가 저하될 수 있습니다.”</p>
+              <!-- <p>“이러한 문제들로 인해 관리자의 업무 부담이 늘어나고<br />건물의 가치가 저하될 수 있습니다.”</p> -->
+              <!-- <p class="desktop-title">“ 문제들로 인해 관리자의 업무 부담이 늘어나고, 건물의 가치가 저하될 수 있습니다.”</p> -->
+              <!-- <p class="mobile-title">“ 문제들로 인해 관리자의 업무 부담이 늘어나고,<br/> 건물의 가치가 저하될 수 있습니다.”</p> -->
+              <p class="mobile-title">“ 이러한 문제들로 인해 관리자의 업무 부담이<br/> 늘어나고, 건물의 가치가 저하될 수 있습니다. ”</p>
             </div>
           </div>
         </div>
