changes updated from harry

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <img src="./assets/images/star.png" alt="star">
               </div>
               <!-- <p>“이러한 문제들로 인해 관리자의 업무 부담이 늘어나고<br />건물의 가치가 저하될 수 있습니다.”</p> -->
-              <!-- <p class="desktop-title">“ 문제들로 인해 관리자의 업무 부담이 늘어나고, 건물의 가치가 저하될 수 있습니다.”</p> -->
+              <p class="desktop-title">“ 문제들로 인해 관리자의 업무 부담이 늘어나고, 건물의 가치가 저하될 수 있습니다.”</p>
               <!-- <p class="mobile-title">“ 문제들로 인해 관리자의 업무 부담이 늘어나고,<br/> 건물의 가치가 저하될 수 있습니다.”</p> -->
               <p class="mobile-title">“ 이러한 문제들로 인해 관리자의 업무 부담이<br/> 늘어나고, 건물의 가치가 저하될 수 있습니다. ”</p>
             </div>
@@ -702,7 +702,8 @@
                 </svg>
               </div>
               <div class="content-box">
-                <p>관리비 부과 기준이 명확하고 투명하게 공개되고 있습니까?</p>
+                <p class="desktop-title">관리비 부과 기준이 명확하고 투명하게 공개되고 있습니까?</p>
+                <p class="mobile-title">관리비 부과 기준이 명확하고<br/> 투명하게 공개되고 있습니까?</p>
               </div>
             </div>
             <div class="issues-box">
@@ -717,7 +718,8 @@
                 </svg>
               </div>
               <div class="content-box">
-                <p>건물 내 주요 시설의 유지보수가 정기적으로 이루어지고 있나요?</p>
+                <p class="desktop-title">건물 내 주요 시설의 유지보수가 정기적으로 이루어지고 있나요?</p>
+                <p class="mobile-title">건물 내 주요 시설의 유지보수가<br/> 정기적으로 이루어지고 있나요?</p>
               </div>
             </div>
             <div class="issues-box">
@@ -732,7 +734,8 @@
                 </svg>
               </div>
               <div class="content-box">
-                <p>건물 관리와 관련된 법적 분쟁을 예방하기 위한 대비가 되어 있나요?</p>
+                <p class="desktop-title">건물 관리와 관련된 법적 분쟁을 예방하기 위한 대비가 되어 있나요?</p>
+                <p class="mobile-title">건물 관리와 관련된 법적 분쟁을<br/> 예방하기 위한 대비가 되어 있나요?</p>
               </div>
             </div>
             <div class="issues-box">
@@ -747,7 +750,8 @@
                 </svg>
               </div>
               <div class="content-box">
-                <p>이해관계자 간의 소통이 원활하게 이루어지고 있나요?</p>
+                <p class="desktop-title">이해관계자 간의 소통이 원활하게 이루어지고 있나요?</p>
+                <p class="mobile-title">이해관계자 간의 소통이<br/> 원활하게 이루어지고 있나요?</p>
               </div>
             </div>
           </div>
