--- a/about-us.html
+++ b/about-us.html
@@ -52,14 +52,14 @@
       <div class="container-fluid">
         <div class="header-inner">
           <div class="left-logo-box">
-            <a href="#">
+            <a href="./index.html">
               <img src="./assets/images/logo-icon.svg" alt="">
               대한건물관리협회
             </a>
           </div>
           <div class="middle-menu-box">
             <ul>
-              <li class="active"><a href="#">협회 소개</a></li>
+              <li class="active"><a href="./about-us.html">협회 소개</a></li>
               <li><a href="#">분쟁해결요청</a></li>
               <!-- <li><a href="#">커뮤니티</a></li> -->
               <!-- Dropdown  -->
@@ -131,7 +131,7 @@
               <div class="offcanvas-body">
                 <div class="menu-wrapper">
                   <ul>
-                    <li class="active"><a href="#">협회 소개</a></li>
+                    <li class="active"><a href="./about-us.html">협회 소개</a></li>
                     <li><a href="#">분쟁해결요청</a></li>
                     <!-- <li><a href="#">커뮤니티</a></li> -->
                     <!-- Dropdown Link  -->
