--- a/about-us.html
+++ b/about-us.html
@@ -144,7 +144,8 @@
                               커뮤니티
                             </button>
                           </h2>
-                          <div id="collapseOnemenu" class="accordion-collapse collapse" data-bs-parent="#accordionExamplemenu">
+                          <div id="collapseOnemenu" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExamplemenu">
                             <div class="accordion-body">
                               <ul>
                                 <li><a href="#">
@@ -196,118 +197,128 @@
   <!-- Header  -->
 
   <!-- About top Section  -->
-   <div class="about-top-section-wrapper">
+  <div class="about-top-section-wrapper">
     <div class="about-top-section-inner">
-        <div class="container-fluid">
-            <div class="about-top-inner-wrapper">
-                <div class="top-section">
-                    <div class="left-section">
-                        <h2>건물 관리의<br/>
-                            새로운 시대를 열어갑니다.</h2>
-                    </div>
-                    <div class="right-section">
-                        <p>대한건물관리협회는 건물 관리 업체들이 직면한 복잡한 문제에 대해 전문적인 조언과 해결책을 제시합니다. 법적 분쟁 예방부터 효율적인 관리 방안까지, 협회는 회원들이 더 나은 관리 기준을 확립할 수 있도록 돕고, 효율적이고 안전한 운영 환경을 구축하는 데 있어 중요한 파트너 역할을 합니다.</p>
-                    </div>
-                </div>
-                <div class="bottom-image-section">
-                    <div class="image-wrapper">
-                        <img src="./assets/images/about/about-image.gif" alt="">
-                    </div>
-                </div>
+      <div class="container-fluid">
+        <div class="about-top-inner-wrapper">
+          <div class="top-section">
+            <div class="left-section">
+              <h2>건물 관리의<br />
+                새로운 시대를 열어갑니다.</h2>
             </div>
+            <div class="right-section">
+              <p>대한건물관리협회는 건물 관리 업체들이 직면한 복잡한 문제에 대해 전문적인 조언과 해결책을 제시합니다. 법적 분쟁 예방부터 효율적인 관리 방안까지, 협회는 회원들이 더 나은 관리 기준을
+                확립할 수 있도록 돕고, 효율적이고 안전한 운영 환경을 구축하는 데 있어 중요한 파트너 역할을 합니다.</p>
+            </div>
+          </div>
+          <div class="bottom-image-section">
+            <div class="image-wrapper">
+              <img src="./assets/images/about/about-image.gif" alt="">
+            </div>
+          </div>
+          <div class="bottom-video-section">
+            <div class="video-wrapper">
+              <video autoplay="" muted="" loop="" playsinline="" preload="auto" id="myVideo">
+                <source src="./assets/images/about/about.mp4" type="video/mp4" />
+              </video>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-   </div>
+  </div>
   <!-- About top Section  -->
 
   <!-- Greeting Section  -->
-   <div class="greeting-section-wrapper">
+  <div class="greeting-section-wrapper">
     <div class="container-fluid">
-        <div class="greeting-section-inner">
-            <div class="left-section">
-                <h2>모두가 믿을 수 있는 건물 관리, <br/>확실한 기준으로 <br/>건물의 가치를 높입니다.</h2>
-                <div class="image-wrapper">
-                    <img src="./assets/images/about/greeting-quote.svg" alt="">
-                </div>
-            </div>
-            <div class="right-section">
-                <h4>투명한 기준과 전문성으로 안전한 운영을 지원합니다.</h4>
-                <p>대한건물관리협회는 투명하고 신뢰성 있는 관리 기준을 최우선으로 두고 있습니다. 공정한 관리 체계를 통해 모든 이해관계자가 안심하고 신뢰할 수 있는 환경을 조성합니다. 협회는 회원들에게 법적 자문과 체계적인 솔루션을 제공하여 복잡한 관리 문제를 해결하고, 건물의 가치를 지속적으로 향상시킬 수 있도록 지원합니다.</p>
-                <p>회원들은 협회의 법률 자문과 체계적인 컨설팅을 통해, 건물 관리의 모든 단계에서 확실한 기준을 세우고 운영 효율성을 극대화할 수 있습니다. 협회의 지원을 통해, 더 나은 운영 환경을 만들고 공정한 건물 관리 문화를 실현할 수 있습니다.</p>
-                <p>협회와 함께, 공정하고 신뢰할 수 있는 관리 환경을 구축해보세요.</p>
-            </div>
+      <div class="greeting-section-inner">
+        <div class="left-section">
+          <h2>모두가 믿을 수 있는 건물 관리, <br />확실한 기준으로 <br />건물의 가치를 높입니다.</h2>
+          <div class="image-wrapper">
+            <img src="./assets/images/about/greeting-quote.svg" alt="">
+          </div>
         </div>
+        <div class="right-section">
+          <h4>투명한 기준과 전문성으로 안전한 운영을 지원합니다.</h4>
+          <p>대한건물관리협회는 투명하고 신뢰성 있는 관리 기준을 최우선으로 두고 있습니다. 공정한 관리 체계를 통해 모든 이해관계자가 안심하고 신뢰할 수 있는 환경을 조성합니다. 협회는 회원들에게 법적
+            자문과 체계적인 솔루션을 제공하여 복잡한 관리 문제를 해결하고, 건물의 가치를 지속적으로 향상시킬 수 있도록 지원합니다.</p>
+          <p>회원들은 협회의 법률 자문과 체계적인 컨설팅을 통해, 건물 관리의 모든 단계에서 확실한 기준을 세우고 운영 효율성을 극대화할 수 있습니다. 협회의 지원을 통해, 더 나은 운영 환경을 만들고
+            공정한 건물 관리 문화를 실현할 수 있습니다.</p>
+          <p>협회와 함께, 공정하고 신뢰할 수 있는 관리 환경을 구축해보세요.</p>
+        </div>
+      </div>
     </div>
-   </div>
+  </div>
   <!-- Greeting Section  -->
 
   <!-- Latest News Section  -->
-   <div class="latest-news-section">
+  <div class="latest-news-section">
     <div class="container-fluid">
-        <div class="latest-news-inner">
-            <div class="top-title-link">
-                <div class="left-title">
-                    <h2>협회 소식</h2>
-                </div>
-                <div class="right-link">
-                    <a href="#">더 알아보기 <span class="material-symbols-outlined">
-                        arrow_right_alt
-                      </span></a>
-                </div>
-            </div>
-            <div class="latest-news-inner-box">
-                <div class="news-box">
-                    <div class="image-wrapper">
-                        <img src="./assets/images/about/news1.png" alt="">
-                    </div>
-                    <div class="title">
-                        <h4>멤버십을 위한 새로운 혜택 및 서비스</h4>
-                    </div>
-                    <div class="content">
-                        <p>저희는 회원 여러분을 지원하기 위해 고안된 다양한 새로운 혜택과 서비스를 소개하게 되어 기쁩니다.</p>
-                    </div>
-                    <div class="link-wrapper">
-                        <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
-                            arrow_right_alt
-                          </span></a>
-                    </div>
-                </div>
-                <div class="news-box">
-                    <div class="image-wrapper">
-                        <img src="./assets/images/about/news2.png" alt="">
-                    </div>
-                    <div class="title">
-                        <h4>건물 유지관리의 모범 사례</h4>
-                    </div>
-                    <div class="content">
-                        <p>효과적인 건물 유지관리는 장수, 안전 및 가치를 보장하는 데 중요합니다. Korea Building에서...</p>
-                    </div>
-                    <div class="link-wrapper">
-                        <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
-                            arrow_right_alt
-                          </span></a>
-                    </div>
-                </div>
-                <div class="news-box">
-                    <div class="image-wrapper">
-                        <img src="./assets/images/about/news3.png" alt="">
-                    </div>
-                    <div class="title">
-                        <h4>최근 정책 변화에서 얻은 주요 통찰력</h4>
-                    </div>
-                    <div class="content">
-                        <p>최근 정부 정책의 변화는 건물 관리 산업에 상당한 영향을 미칠 것으로 예상됩니다...</p>
-                    </div>
-                    <div class="link-wrapper">
-                        <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
-                            arrow_right_alt
-                          </span></a>
-                    </div>
-                </div>
-            </div>
+      <div class="latest-news-inner">
+        <div class="top-title-link">
+          <div class="left-title">
+            <h2>협회 소식</h2>
+          </div>
+          <div class="right-link">
+            <a href="#">더 알아보기 <span class="material-symbols-outlined">
+                arrow_right_alt
+              </span></a>
+          </div>
         </div>
+        <div class="latest-news-inner-box">
+          <div class="news-box">
+            <div class="image-wrapper">
+              <img src="./assets/images/about/news1.png" alt="">
+            </div>
+            <div class="title">
+              <h4>멤버십을 위한 새로운 혜택 및 서비스</h4>
+            </div>
+            <div class="content">
+              <p>저희는 회원 여러분을 지원하기 위해 고안된 다양한 새로운 혜택과 서비스를 소개하게 되어 기쁩니다.</p>
+            </div>
+            <div class="link-wrapper">
+              <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
+                  arrow_right_alt
+                </span></a>
+            </div>
+          </div>
+          <div class="news-box">
+            <div class="image-wrapper">
+              <img src="./assets/images/about/news2.png" alt="">
+            </div>
+            <div class="title">
+              <h4>건물 유지관리의 모범 사례</h4>
+            </div>
+            <div class="content">
+              <p>효과적인 건물 유지관리는 장수, 안전 및 가치를 보장하는 데 중요합니다. Korea Building에서...</p>
+            </div>
+            <div class="link-wrapper">
+              <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
+                  arrow_right_alt
+                </span></a>
+            </div>
+          </div>
+          <div class="news-box">
+            <div class="image-wrapper">
+              <img src="./assets/images/about/news3.png" alt="">
+            </div>
+            <div class="title">
+              <h4>최근 정책 변화에서 얻은 주요 통찰력</h4>
+            </div>
+            <div class="content">
+              <p>최근 정부 정책의 변화는 건물 관리 산업에 상당한 영향을 미칠 것으로 예상됩니다...</p>
+            </div>
+            <div class="link-wrapper">
+              <a href="#"><span class="underline">자세히 보기</span> <span class="material-symbols-outlined">
+                  arrow_right_alt
+                </span></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-   </div>
+  </div>
   <!-- Latest News Section  -->
 
 
