fixed home title

--- a/about-us.html
+++ b/about-us.html
@@ -399,6 +399,7 @@
   </script> -->
 
   <script>
+    document.getElementById("myVideo").setAttribute('autoplay', true);
     // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
     // const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
 
