--- a/about-us.html
+++ b/about-us.html
@@ -240,12 +240,12 @@
           </div>
         </div>
         <div class="right-section">
-          <h4>투명한 기준과 전문성으로 안전한 운영을 지원합니다.</h4>
+          <h4>투명한 기준과 전문성으로<br/> 안전한 운영을 지원합니다.</h4>
           <p>대한건물관리협회는 투명하고 신뢰성 있는 관리 기준을 최우선으로 두고 있습니다. 공정한 관리 체계를 통해 모든 이해관계자가 안심하고 신뢰할 수 있는 환경을 조성합니다. 협회는 회원들에게 법적
             자문과 체계적인 솔루션을 제공하여 복잡한 관리 문제를 해결하고, 건물의 가치를 지속적으로 향상시킬 수 있도록 지원합니다.</p>
           <p>회원들은 협회의 법률 자문과 체계적인 컨설팅을 통해, 건물 관리의 모든 단계에서 확실한 기준을 세우고 운영 효율성을 극대화할 수 있습니다. 협회의 지원을 통해, 더 나은 운영 환경을 만들고
             공정한 건물 관리 문화를 실현할 수 있습니다.</p>
-          <p>협회와 함께, 공정하고 신뢰할 수 있는 관리 환경을 구축해보세요.</p>
+          <p>협회와 함께,<br/> 공정하고 신뢰할 수 있는 관리 환경을 구축해보세요.</p>
         </div>
       </div>
     </div>
@@ -315,6 +315,11 @@
                 </span></a>
             </div>
           </div>
+        </div>
+        <div class="bottom-mobile-link">
+          <a href="#">더 알아보기 <span class="material-symbols-outlined">
+            arrow_right_alt
+          </span></a>
         </div>
       </div>
     </div>
@@ -399,7 +404,7 @@
   </script> -->
 
   <script>
-    document.getElementById("myVideo").setAttribute('autoplay', true);
+    // document.getElementById("myVideo").setAttribute('autoplay', true);
     // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
     // const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
 
