--- a/sign-up.html
+++ b/sign-up.html
@@ -71,6 +71,20 @@
                                             <label for="floatingusername">아이디</label>
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <div class="form-floating">
+                                            <input type="password" class="form-control" id="floatingpassword"
+                                                placeholder="password">
+                                            <label for="floatingpassword">비밀번호</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="form-floating">
+                                            <input type="password" class="form-control" id="floatingpassword"
+                                                placeholder="password">
+                                            <label for="floatingpassword">비밀번호</label>
+                                        </div>
+                                    </div>
                                     <div class="row-inner">
                                         <div class="col-inner">
                                             <div class="form-group">
