passowrd placeholder updated

--- a/sign-up.html
+++ b/sign-up.html
@@ -82,7 +82,7 @@
                                         <div class="form-floating">
                                             <input type="password" class="form-control" id="floatingpassword"
                                                 placeholder="password">
-                                            <label for="floatingpassword">비밀번호</label>
+                                            <label for="floatingpassword">비밀번호 확인</label>
                                         </div>
                                     </div>
                                     <div class="row-inner">
