--- a/about-us.html
+++ b/about-us.html
@@ -102,7 +102,7 @@
             </ul>
           </div>
           <div class="right-sign-up-box">
-            <a href="./sign-up.html">
+            <a href="./sign-in.html">
               로그인 / 회원가입
             </a>
           </div>
@@ -183,7 +183,7 @@
                   </ul>
                 </div>
                 <div class="mobile-menu-link">
-                  <a href="./sign-up.html">로그인 / 회원가입</a>
+                  <a href="./sign-in.html">로그인 / 회원가입</a>
                 </div>
 
               </div>
