--- a/sign-in.html
+++ b/sign-in.html
@@ -99,7 +99,7 @@
                     <!-- Bottom Section  -->
                     <div class="bottom-section-wrapper">
                         <div class="inner-wrapper">
-                            <p>이미 계정이 있으신가요? <a href="./sign-up.html">지금 로그인하세요</a></p>
+                            <p>회원이 아니신가요? <a href="./sign-up.html">회원가입 하기 ></a></p>
                         </div>
                     </div>
                     <!-- Bottom Section  -->
