--- a/dispute-resolution-requests.html
+++ b/dispute-resolution-requests.html
@@ -207,8 +207,8 @@
         <div class="container-fluid">
             <div class="dispute-resolution-top-inner">
                 <div class="left-content-section">
-                    <h2>공정한 분쟁 해결을 도와드립니다.</h2>
-                    <p>모든 이해관계자를 위해 공정하고 신속한 분쟁 해결을 지원합니다.</p>
+                    <h2>공정한 분쟁 해결을<br/> 도와드립니다.</h2>
+                    <p>모든 이해관계자를 위해<br/> 공정하고 신속한 분쟁 해결을 지원합니다.</p>
                 </div>
                 <div class="right-image-section">
                     <div class="image-wrapper">
