user details image and name added

--- a/dispute-resolution-requests.html
+++ b/dispute-resolution-requests.html
@@ -101,11 +101,33 @@
                             <li><a href="#">협회 가입안내</a></li>
                         </ul>
                     </div>
-                    <div class="right-sign-up-box">
+                    <!-- <div class="right-sign-up-box">
                         <a href="./sign-in.html">
                             로그인 / 회원가입
                         </a>
+                    </div> -->
+                    <!-- User details box  -->
+                    <div class="user-details-box">
+                        <div class="dropdown">
+                            <a class="dropdown-btn btn btn-secondary dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <div class="userdetails-inner">
+                                    <div class="user-image">
+                                        <img src="./assets/images/user1.png" alt="">
+                                    </div>
+                                    <div class="user-name">
+                                        <h5>박철민</h5>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">마이 페이지</a></li>
+                                <li><a class="dropdown-item" href="#">로그아웃</a></li>
+                            </ul>
+                        </div>
                     </div>
+                    <!-- User details box  -->
                     <!-- Mobile Menu  -->
                     <div class="mobile-menu-wrapper">
                         <!-- <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
@@ -207,8 +229,8 @@
         <div class="container-fluid">
             <div class="dispute-resolution-top-inner">
                 <div class="left-content-section">
-                    <h2>공정한 분쟁 해결을<br/> 도와드립니다.</h2>
-                    <p>모든 이해관계자를 위해<br/> 공정하고 신속한 분쟁 해결을 지원합니다.</p>
+                    <h2>공정한 분쟁 해결을<br /> 도와드립니다.</h2>
+                    <p>모든 이해관계자를 위해<br /> 공정하고 신속한 분쟁 해결을 지원합니다.</p>
                 </div>
                 <div class="right-image-section">
                     <div class="image-wrapper">
@@ -862,9 +884,10 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn_submit" type="submit">요청하기 <span class="material-symbols-outlined">
-                                        arrow_right_alt
-                                      </span></button>
+                                    <button class="btn_submit" type="submit">요청하기 <span
+                                            class="material-symbols-outlined">
+                                            arrow_right_alt
+                                        </span></button>
                                 </div>
                             </form>
                         </div>
