--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                               커뮤니티
                             </button>
                           </h2>
-                          <div id="collapseOnemenu" class="accordion-collapse collapse" data-bs-parent="#accordionExamplemenu">
+                          <div id="collapseOnemenu" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExamplemenu">
                             <div class="accordion-body">
                               <ul>
                                 <li><a href="#">
