adding membership page

--- a/dispute-resolution-requests.html
+++ b/dispute-resolution-requests.html
@@ -98,7 +98,7 @@
                                 </div>
                             </li>
                             <!-- Dropdown  -->
-                            <li><a href="#">협회 가입안내</a></li>
+                            <li><a href="./membership-guide.html">협회 가입안내</a></li>
                         </ul>
                     </div>
                     <!-- <div class="right-sign-up-box">
@@ -207,7 +207,7 @@
                                             </div>
                                         </li>
                                         <!-- Dropdown Link  -->
-                                        <li><a href="#">협회 가입안내</a></li>
+                                        <li><a href="./membership-guide.html">협회 가입안내</a></li>
                                     </ul>
                                 </div>
                                 <div class="mobile-menu-link">
