membership page responsive done

--- a/membership-guide.html
+++ b/membership-guide.html
@@ -390,7 +390,7 @@
                         <h2>협회 가입 신청하기</h2>
                     </div>
                     <div class="content-para">
-                        <p>한국건물관리협회에 가입하시고, <br/> 건물 관리의 최적화를 위해 전문적인 지원을 받아보세요.</p>
+                        <p>한국건물관리협회에 가입하시고, <br/> 건물 관리의 최적화를 위해 전문적인 지원을<br class="mobile-break" /> 받아보세요.</p>
                     </div>
                     <div class="membership-price-wrapepr">
                         <div class="left-section">
