--- a/about-us.html
+++ b/about-us.html
@@ -75,7 +75,7 @@
                           </div>
                           공지사항
                         </a></li>
-                      <li><a href="#">
+                      <li><a href="./association-news.html">
                           <div class="image-box">
                             <img src="./assets/images/association-news.svg" alt="">
                           </div>
@@ -154,7 +154,7 @@
                                     </div>
                                     공지사항
                                   </a></li>
-                                <li><a href="#">
+                                <li><a href="./association-news.html">
                                     <div class="image-box">
                                       <img src="./assets/images/association-news.svg" alt="">
                                     </div>
